javadoc includes in all archives

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,13 @@
 spring.datasource.url=${JDBC_DATABASE_URL\:jdbc\:h2\:mem\:rol}
 spring.datasource.username=${JDBC_DATABASE_USERNAME\:sa}
 spring.datasource.password=${JDBC_DATABASE_PASSWORD\:}
+#Tiempo de espera máximo en milisegundos
 spring.datasource.dbcp2.max-wait-millis=30000
+#Es la consulta SQL para validar la conexión
 spring.datasource.dbcp2.validation-query=select 1
+#Tiempo máximo en segundos para validar la conexión
 spring.datasource.dbcp2.validation-query-timeout=30
+#Actualiza el esquema automáticamente
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.open-in-view=false
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
