--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,14 @@
     </properties>
 
     <dependencies>
+
+        <dependency>
+            <groupId>org.testifyproject.junit5</groupId>
+            <artifactId>junit5</artifactId>
+            <version>1.0.6</version>
+            <type>pom</type>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
